# idle-survivors

./: .gitignore  README.md  demo.py  pyproject.toml  test.py  vampire-a2c-5enemies-nsteps2048-normalized-entcoef0.1-vf0.25-sde  visualize.ipynb
configs/: base_vampire.yaml
experiments/: README.md
gymnasium_env/: __init__.py
gymnasium_env/envs/: __init__.py  grid_world.py  vampire_world.py
gymnasium_env/wrappers/: __init__.py
idle_vampires/: __init__.py
idle_vampires/configs/: base.yaml
idle_vampires/envs/: __init__.py  vampire_world.py
idle_vampires/wrappers/: __init__.py
models/: vampire-a2c-5enemies-nsteps2048-normalized-entcoef0.05-vf0.25-sde
notebooks/: rnd.ipynb  visualize.ipynb
scripts/: demo.py
