[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["idle_vampires"]

[project]
name = "idle-vampires"
version = "0.1.0"
description = "Reinforcement learning environment for a bullet-heaven style game"
dependencies = [
  "gymnasium",
  "pygame>=2.1.3",
  "stable_baselines3",
  "omegaconf"
]
